--- a/frontend/src/app/layout/footer/footer.component.html
+++ b/frontend/src/app/layout/footer/footer.component.html
@@ -1,1 +1,1 @@
-<div class="mt-auto flex justify-center p-6 pt-0 text-center dark:text-white-dark ltr:sm:text-left rtl:sm:text-right print:hidden">©  Emir Gicic rights reserved.</div>
+<div class="footer-content">© Emir Gicic rights reserved.</div>
