--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -6,6 +6,9 @@
   <div>
     
     <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 20vw; max-width: 500px; background: rgba(237, 242, 239, 0.8); padding: 2em; border-radius: 25px; box-shadow: 0 4px 8px rgba(0,0,0,0.1);">
+      <div style="display: flex; justify-content: center; align-items: center; margin-bottom: 1em;">
+        <a routerLink="/dashboard/main_page" style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 1em; color: grey; font-style: italic;">Click to find out more about us!</a>
+      </div>
       <h1 style="text-align: center; margin-top: 0; margin-bottom: 1em; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #333; font-size: 1.5em;">Vasa Masta-Vasa Basta</h1>
 
       <div style="display: flex; justify-content: center; align-items: center;">
