--- a/frontend/src/app/decor/decor-info/decor-info.component.html
+++ b/frontend/src/app/decor/decor-info/decor-info.component.html
@@ -1,6 +1,6 @@
 <div class="owner-info-container">
   <div style="text-align: center;">
-      <h1>Owner Info</h1>
+      <h1>Decor Info</h1>
       <p style="margin: 0; text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 1em; color: grey; font-style: italic;">{{message}}</p>
       <ng-container *ngIf="(message !== '') && (message !== 'Looks Good')">
           <icon-warning-hex></icon-warning-hex>
