--- a/frontend/src/app/layout/layout.component.html
+++ b/frontend/src/app/layout/layout.component.html
@@ -10,10 +10,7 @@
 
     <div class="main-content flex flex-col flex-grow pt-16">
       <!--  BEGIN CONTENT AREA  -->
-      <div class="animation p-5 print:p-0">
-        <div class="panel mb-3 flex items-center overflow-x-auto whitespace-nowrap p-5 text-primary print:hidden">
-          <!-- <app-breadcrumbs></app-breadcrumbs> -->
-        </div>
+      <div class="animation print:p-0">
         <router-outlet></router-outlet>
       </div>
       <!--  END CONTENT AREA  -->
